--- a/views/materials.pug
+++ b/views/materials.pug
@@ -6,6 +6,8 @@ html
     link(rel='stylesheet', href='/css/styles.css')
   body
     include includes/header.pug
+    .hero
+        img(src="img/cookpot.jpg", width="100%")
     .main
       .main-inner
         h1= header
